--- a/dhoffstatter_p1.html
+++ b/dhoffstatter_p1.html
@@ -5,6 +5,7 @@
   <title>Business Analytics Student Survey</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a32020a93f.js" crossorigin="anonymous"></script>
   <style>
     body {
       background-color: #f8f9fa;
@@ -17,6 +18,11 @@
       padding: 2rem;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .tooltip-icon {
+      margin-left: 5px;
+      color: #0d6efd;
+      cursor: pointer;
     }
     .next-button {
       margin-top: 2rem;
@@ -33,13 +39,16 @@
       </div>
 
       <div class="mb-3">
-        <label for="town" class="form-label">My home town is: <span class="text-danger">*</span></label>
+        <label for="town" class="form-label">
+          My home town is: <span class="text-danger">*</span>
+          <i class="fas fa-circle-question tooltip-icon" data-bs-toggle="modal" data-bs-target="#townModal"></i>
+        </label>
         <input type="text" id="town" name="town" class="form-control" required>
       </div>
 
       <div class="mb-3">
-        <label for="state-select" class="form-label">My home state is:</label>
-        <select name="state" id="state-select" class="form-select">
+        <label for="state-select" class="form-label">My home state is: <span class="text-danger">*</span></label>
+        <select name="state" id="state-select" class="form-select" required>
           <option value="">-- choose state/territory --</option>
           <option value="AL">AL</option>
           <option value="AK">AK</option>
@@ -118,5 +127,25 @@
       </button>
     </form>
   </div>
+
+  
+  <div class="modal fade" id="townModal" tabindex="-1" aria-labelledby="townModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="townModalLabel">More Info</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          What town did you live in before coming to college?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
