--- a/dhoffstatter_ty.html
+++ b/dhoffstatter_ty.html
@@ -2,12 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Business Analytics Student Survey</title>
+  <title>Thank You – Business Analytics Student Survey</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #f8f9fa;
+      padding: 2rem;
+    }
+    .thank-you-container {
+      max-width: 700px;
+      margin: auto;
+      background-color: #ffffff;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
-<body class="container text-center mt-5">
-  <h1>Thank You!</h1>
-  <p>Your response has been saved.</p>
+<body>
+  <div class="thank-you-container">
+    <img src="iowa.jpg" alt="University of Iowa campus" class="img-fluid rounded mb-4">
+    <h1>Thank You!</h1>
+    <p>Your response has been recorded. We appreciate your time and feedback.</p>
+    <p>Go Hawks!</p>
+  </div>
 </body>
 </html>
