--- a/dhoffstatter_p2.html
+++ b/dhoffstatter_p2.html
@@ -26,23 +26,35 @@
 <body>
   <div class="survey-container">
     <h1>Business Analytics Student Survey</h1>
-    <form>
+    <form onsubmit="return validateForm()">
       <div class="mb-3">
-        <label for="year" class="form-label">I am finishing my: <span class="text-danger">*</span></label>
-        <select id="year" name="year" class="form-select" required>
-          <option value="">-- select one --</option>
-          <option value="1">First year at Iowa</option>
-          <option value="2">Second year at Iowa</option>
-          <option value="3">Third year at Iowa</option>
-          <option value="4">Fourth year at Iowa</option>
-          <option value="5">Fifth or more year at Iowa</option>
-        </select>
+        <label class="form-label">I am finishing my: <span class="text-danger">*</span></label>
+        <div class="form-check">
+          <input type="radio" id="year1" name="year" value="1" class="form-check-input" required>
+          <label for="year1" class="form-check-label">First year at Iowa</label>
+        </div>
+        <div class="form-check">
+          <input type="radio" id="year2" name="year" value="2" class="form-check-input">
+          <label for="year2" class="form-check-label">Second year at Iowa</label>
+        </div>
+        <div class="form-check">
+          <input type="radio" id="year3" name="year" value="3" class="form-check-input">
+          <label for="year3" class="form-check-label">Third year at Iowa</label>
+        </div>
+        <div class="form-check">
+          <input type="radio" id="year4" name="year" value="4" class="form-check-input">
+          <label for="year4" class="form-check-label">Fourth year at Iowa</label>
+        </div>
+        <div class="form-check">
+          <input type="radio" id="year5" name="year" value="5" class="form-check-input">
+          <label for="year5" class="form-check-label">Fifth or more year at Iowa</label>
+        </div>
       </div>
 
       <div class="mb-3">
         <label class="form-label">BAIS core classes I have completed: <span class="text-danger">*</span></label>
         <div class="form-check">
-          <input type="checkbox" id="info-systems" name="courses" value="Information Systems" class="form-check-input" required>
+          <input type="checkbox" id="info-systems" name="courses" value="Information Systems" class="form-check-input">
           <label for="info-systems" class="form-check-label">Information Systems</label>
         </div>
         <div class="form-check">
@@ -76,10 +88,21 @@
       </div>
 
       <p class="mt-3">Page 2 of 2</p>
-      <button onclick="window.location.href='dhoffstatter_ty.html';" type="button" class="btn btn-success finish-button">
-        Finish
-      </button>
+      <button type="submit" class="btn btn-success finish-button">Finish</button>
     </form>
   </div>
+
+  <script>
+    function validateForm() {
+      const checkboxes = document.querySelectorAll('input[name="courses"]');
+      const oneChecked = Array.from(checkboxes).some(cb => cb.checked);
+      if (!oneChecked) {
+        alert("Please select at least one BAIS core class.");
+        return false;
+      }
+      window.location.href = 'dhoffstatter_ty.html';
+      return true;
+    }
+  </script>
 </body>
 </html>
