--- a/dhoffstatter_p2.html
+++ b/dhoffstatter_p2.html
@@ -26,7 +26,7 @@
 <body>
   <div class="survey-container">
     <h1>Business Analytics Student Survey</h1>
-    <form onsubmit="return validateForm()">
+    <form id="surveyForm">
       <div class="mb-3">
         <label class="form-label">I am finishing my: <span class="text-danger">*</span></label>
         <div class="form-check">
@@ -88,20 +88,26 @@
       </div>
 
       <p class="mt-3">Page 2 of 2</p>
-      <button type="submit" class="btn btn-success finish-button">Finish</button>
+      <button type="button" class="btn btn-success finish-button" onclick="submitSurvey()">Finish</button>
     </form>
   </div>
 
   <script>
-    function validateForm() {
+    function submitSurvey() {
+      const form = document.getElementById('surveyForm');
       const checkboxes = document.querySelectorAll('input[name="courses"]');
       const oneChecked = Array.from(checkboxes).some(cb => cb.checked);
+
       if (!oneChecked) {
         alert("Please select at least one BAIS core class.");
-        return false;
+        return;
       }
-      window.location.href = 'dhoffstatter_ty.html';
-      return true;
+
+      if (form.checkValidity()) {
+        window.location.href = 'dhoffstatter_ty.html';
+      } else {
+        form.reportValidity();
+      }
     }
   </script>
 </body>
